--- a/trunk/ExampleAIModule/ExampleAIModule/ExampleAIModule.vcproj
+++ b/trunk/ExampleAIModule/ExampleAIModule/ExampleAIModule.vcproj
@@ -111,7 +111,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../../include;&quot;../../../bwapi-read-only/bwapi/include&quot;"
+				AdditionalIncludeDirectories="../../include;&quot;../../../bwapi-read-only/bwapi/Util/Source/Util&quot;;&quot;../../../bwapi-read-only/bwapi/include&quot;"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
@@ -128,7 +128,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="../../../bwapi-read-only/bwapi/Release/BWAPI.lib ../../../bwapi-read-only/bwapi/lib/BWTA.lib ../../../bwapi-read-only/bwapi/lib/CGAL-vc90-mt.lib ../../../bwapi-read-only/bwapi/lib/gmp-vc90-mt.lib ../../../bwapi-read-only/bwapi/lib/libboost_thread-vc90-mt-1_38.lib ../../../bwapi-read-only/bwapi/lib/mpfr-vc90-mt.lib"
+				AdditionalDependencies="../../../bwapi-read-only/bwapi/Release/BWAPI.lib ../../../bwapi-read-only/bwapi/Release/Util.lib ../../../bwapi-read-only/bwapi/lib/BWTA.lib ../../../bwapi-read-only/bwapi/lib/CGAL-vc90-mt.lib ../../../bwapi-read-only/bwapi/lib/gmp-vc90-mt.lib ../../../bwapi-read-only/bwapi/lib/libboost_thread-vc90-mt-1_38.lib ../../../bwapi-read-only/bwapi/lib/mpfr-vc90-mt.lib"
 				GenerateDebugInformation="false"
 				ProgramDatabaseFile=""
 				OptimizeReferences="2"
@@ -183,6 +183,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\T12.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\utils.cpp"
 				>
 			</File>
@@ -194,14 +198,6 @@
 			>
 			<File
 				RelativePath=".\ExampleAIModule.h"
-				>
-			</File>
-			<File
-				RelativePath=".\T10.h"
-				>
-			</File>
-			<File
-				RelativePath=".\T11.h"
 				>
 			</File>
 			<File
