--- a/trunk/ExampleAIModule/ExampleAIModule/ExampleAIModule.vcproj
+++ b/trunk/ExampleAIModule/ExampleAIModule/ExampleAIModule.vcproj
@@ -58,7 +58,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="../../../bwapi-read-only/bwapi/Release/BWAPI.lib ../../../bwapi-read-only/bwapi/lib/BWTA.lib ../../../bwapi-read-only/bwapi/lib/CGAL-vc90-mt.lib ../../../bwapi-read-only/bwapi/lib/gmp-vc90-mt.lib ../../../bwapi-read-only/bwapi/lib/libboost_thread-vc90-mt-1_38.lib ../../../bwapi-read-only/bwapi/lib/mpfr-vc90-mt.lib"
+				AdditionalDependencies="../../../bwapi-read-only/bwapi/Release/BWAPI.lib"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
 			/>
@@ -111,7 +111,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../../include;&quot;../../../bwapi-read-only/bwapi/Util/Source/Util&quot;;&quot;../../../bwapi-read-only/bwapi/include&quot;"
+				AdditionalIncludeDirectories="../../include;&quot;../../../bwapi-read-only/bwapi/include&quot;;&quot;../../../bwapi-read-only/bwapi/Util/Source/Util&quot;"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
@@ -128,7 +128,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="../../../bwapi-read-only/bwapi/Release/BWAPI.lib ../../../bwapi-read-only/bwapi/Release/Util.lib ../../../bwapi-read-only/bwapi/lib/BWTA.lib ../../../bwapi-read-only/bwapi/lib/CGAL-vc90-mt.lib ../../../bwapi-read-only/bwapi/lib/gmp-vc90-mt.lib ../../../bwapi-read-only/bwapi/lib/libboost_thread-vc90-mt-1_38.lib ../../../bwapi-read-only/bwapi/lib/mpfr-vc90-mt.lib"
+				AdditionalDependencies="../../../bwapi-read-only/bwapi/Release/BWAPI.lib"
 				GenerateDebugInformation="false"
 				ProgramDatabaseFile=""
 				OptimizeReferences="2"
@@ -155,6 +155,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="C:\long\oss\scbw\neoe-bw-ai-missions\ExampleAIModule\cp.cmd"
 			/>
 		</Configuration>
 	</Configurations>
