--- a/ExampleAIModule/ExampleAIModule/ExampleAIModule.vcproj
+++ b/ExampleAIModule/ExampleAIModule/ExampleAIModule.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="ExampleAIModule"
+	Name="MissionsAI"
 	ProjectGUID="{56DDBBA2-58FB-467D-8923-A214B16649F5}"
 	RootNamespace="ExampleAIModule"
 	TargetFrameworkVersion="196613"
@@ -129,7 +129,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="../../../bwapi-read-only/bwapi/Release/BWAPI.lib"
-				OutputFile="$(OutDir)\NeoeAI.dll"
+				OutputFile="$(OutDir)\$(ProjectName).dll"
 				GenerateDebugInformation="false"
 				ProgramDatabaseFile=""
 				OptimizeReferences="2"
@@ -173,7 +173,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\ExampleAIModule.cpp"
+				RelativePath=".\MissionsAIModule.cpp"
 				>
 			</File>
 			<File
@@ -193,6 +193,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\T14.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\T15.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\utils.cpp"
 				>
 			</File>
@@ -203,7 +211,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\ExampleAIModule.h"
+				RelativePath=".\MissionsAIModule.h"
+				>
+			</File>
+			<File
+				RelativePath=".\T15.h"
 				>
 			</File>
 			<File
