--- a/trunk/ExampleAIModule/ExampleAIModule/ExampleAIModule.vcproj
+++ b/trunk/ExampleAIModule/ExampleAIModule/ExampleAIModule.vcproj
@@ -177,6 +177,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\T00.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\T10.cpp"
 				>
 			</File>
