--- a/ExampleAIModule/ExampleAIModule/ExampleAIModule.vcproj
+++ b/ExampleAIModule/ExampleAIModule/ExampleAIModule.vcproj
@@ -173,6 +173,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\DropMission.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\MissionsAIModule.cpp"
 				>
 			</File>
@@ -214,6 +218,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\DropMission.h"
+				>
+			</File>
 			<File
 				RelativePath=".\MissionsAIModule.h"
 				>
