--- a/trunk/ExampleAIModule/ExampleAIModule/ExampleAIModule.vcproj
+++ b/trunk/ExampleAIModule/ExampleAIModule/ExampleAIModule.vcproj
@@ -193,6 +193,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\T110.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\T12.cpp"
 				>
 			</File>
